--- a/styles.css
+++ b/styles.css
@@ -77,10 +77,12 @@ text-align: center;
     text-align: center;
 }
 
-#experience>.title .underline {
+#experience>.title .underline,
+#education>.title .underline {
     background-color: white;
 }
-#experience>.title h2 {
+#experience>.title h2,
+#education>.title h2 {
     color: white;
 }
 
@@ -104,6 +106,10 @@ ul.education-lists {
     flex-wrap: wrap;
 }
 
+ul.education-lists {
+    padding: 50px;
+}
+
 li.experience-options,
 li.project-option,
 li.education-options {
@@ -111,6 +117,48 @@ li.education-options {
     border: 1px solid grey;
     padding: 20px;
     margin: 20px 10px;
+}
+
+li.education-options {
+    cursor: pointer;
+    transition: transform 0.3s ease-in-out;;
+}
+
+li.education-options:hover {
+    transform: translateY(-10px);
+}
+
+#education {
+    background-color: black;
+    padding: 20px;
+    margin-bottom: 0;
+}
+
+#education ul li {
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+.ed-year {
+    text-align: left;
+    margin-bottom: 5px;
+    color: #638cc5;
+}
+
+.ed-degree {
+    color: white;
+    letter-spacing: 1px;
+    margin-bottom: 5px;
+} 
+
+.ed-uni {
+    color: grey;
+    letter-spacing: 1px;
+    margin-bottom: 30px;
+}
+
+.ed-grade {
+    color: grey;
+    letter-spacing: 1px;
 }
 
 header {
@@ -233,7 +281,6 @@ html {
     font-family: 'Courier New', Courier, monospace;
     white-space: nowrap;
     overflow: hidden;
-
     width: 0; /* Start with no text visible */
     opacity: 0;
     transition: opacity 0.5s;
