--- a/styles.css
+++ b/styles.css
@@ -1,393 +1,449 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 .navigation {
-    width: 100%;
-    height: 60px;
-    background-color: #242429bf;
-    border-bottom: 0.5px solid #000000;
-    position: fixed;
-    z-index: 1030;
+  width: 100%;
+  height: 60px;
+  background-color: #242429bf;
+  border-bottom: 0.5px solid #000000;
+  position: fixed;
+  z-index: 1030;
 }
 
 body {
-    font-family: Arial, sans-serif, 'Roboto';
-    line-height: 1.6;
-    background-color: #f4f4f4;
-    color: #333;
+  font-family: Arial, sans-serif, "Roboto";
+  line-height: 1.6;
+  background-color: #f4f4f4;
+  color: #333;
 }
 
 .title {
-    text-align: left;
-    position: relative;
+  text-align: left;
+  position: relative;
 }
 
 .title h2 {
-    text-align: left;
+  text-align: left;
 }
 
 .underline {
-    width: 30px;
-    height: 3px;
-    background-color: black;
-} 
+  width: 30px;
+  height: 3px;
+  background-color: black;
+}
 
 .about-me-wrapper {
-    padding: 120px 200px;
+  padding: 120px 200px;
 }
 
 .about-contents {
-    width: 100%;
-    display: flex;
-    margin: 20px 0;
+  width: 100%;
+  display: flex;
+  margin: 20px 0;
 }
 
 #about {
-    min-height: 700px;
-    background-image: url('./my-image.JPG');
-    background-repeat: no-repeat;
-    background-size: 1000px;
-    background-position: 130% 40%;
+  min-height: 700px;
+  background-image: url("./my-image.png");
+  background-repeat: no-repeat;
+  background-size: 1000px;
+  background-position: 130% 40%;
 }
 
 p.about-me {
-    color: gray;
-    width: 35%;
+  color: gray;
+  width: 35%;
+  letter-spacing: 1px;
 }
 
 #experience {
-    background: black;
-    padding: 20px 0;
+  background: black;
+  padding: 20px 0;
 }
 
-#experience>.title,
-#projects>.title,
-#education>.title,
-#skills>.title {
-text-align: center;
+#experience > .title,
+#projects .title,
+#education > .title,
+#skills > .title {
+  text-align: center;
 }
 
-#experience>.title h2,
-#projects>.title h2,
-#education>.title h2,
-#skills>.title h2 {
-    text-align: center;
+#projects .title {
+  padding: 20px;
 }
 
-#experience>.title .underline,
-#education>.title .underline {
-    background-color: white;
-}
-#experience>.title h2,
-#education>.title h2 {
-    color: white;
+#experience > .title h2,
+#projects .title h2,
+#education > .title h2,
+#skills > .title h2 {
+  text-align: center;
 }
 
-#experience>.title .underline,
-#projects>.title .underline,
-#education>.title .underline {
-    position: absolute;
-    right: 50%;
+#experience > .title .underline,
+#education > .title .underline {
+  background-color: white;
+}
+#experience > .title h2,
+#education > .title h2,
+#projects .title h2 {
+  color: white;
 }
 
-#skills>.title .underline {
-    position: absolute;
-    right: 49%;
+#experience > .title .underline,
+#projects > .title .underline,
+#education > .title .underline,
+#projects .title .underline {
+  position: absolute;
+  right: 50%;
+}
+
+#projects .title .underline {
+  background-color: white;
+}
+
+#skills > .title .underline {
+  position: absolute;
+  right: 49%;
 }
 
 ul.experience-list,
 ul.project-lists,
 ul.education-lists {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 ul.education-lists {
-    padding: 50px;
+  padding: 50px;
 }
 
 li.experience-options,
 li.project-option,
 li.education-options {
-    width: 40%;
-    border: 1px solid grey;
-    padding: 20px;
-    margin: 20px 10px;
+  width: 40%;
+  border: 1px solid grey;
+  padding: 20px;
+  margin: 20px 10px;
 }
 
 li.education-options {
-    cursor: pointer;
-    transition: transform 0.3s ease-in-out;;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
 }
 
 li.education-options:hover {
-    transform: translateY(-10px);
+  transform: translateY(-10px);
 }
 
 #education {
-    background-color: black;
-    padding: 20px;
-    margin-bottom: 0;
+  background-color: black;
+  padding: 50px;
+  margin-bottom: 0;
 }
 
 #education ul li {
-    background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .ed-year {
-    text-align: left;
-    margin-bottom: 5px;
-    color: #638cc5;
+  text-align: left;
+  margin-bottom: 5px;
+  color: #638cc5;
 }
 
 .ed-degree {
-    color: white;
-    letter-spacing: 1px;
-    margin-bottom: 5px;
-} 
+  color: white;
+  letter-spacing: 1px;
+  margin-bottom: 5px;
+}
 
 .ed-uni {
-    color: grey;
-    letter-spacing: 1px;
-    margin-bottom: 30px;
+  color: grey;
+  letter-spacing: 1px;
+  margin-bottom: 30px;
 }
 
 .ed-grade {
-    color: grey;
-    letter-spacing: 1px;
+  color: grey;
+  letter-spacing: 1px;
 }
 
 header {
-    background: black;
-    color: #fff;
-    padding: 20px 0;
-    text-align: center;
-    min-height: 100vh;
-    background-image: url('./gif-image.gif');
-    background-repeat: no-repeat;
-    background-size: 600px;
-    background-position: 80% 40%;
+  background: black;
+  color: #fff;
+  padding: 20px 0;
+  text-align: center;
+  min-height: 100vh;
+  background-image: url("./gif-image.gif");
+  background-repeat: no-repeat;
+  background-size: 600px;
+  background-position: 80% 40%;
 }
 
 .overlay {
-    background-color: rgba(0, 0, 0, 0.5);;
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
 }
 
 section#home {
-    position: relative;
-    top: 300px;
+  position: relative;
+  top: 300px;
 }
 
 header nav ul {
-    width: 95%;
-    height: 100%;
-    list-style: none;
-    display: flex;
-    justify-content: right;
-    align-items: center;
+  width: 95%;
+  height: 100%;
+  list-style: none;
+  display: flex;
+  justify-content: right;
+  align-items: center;
 }
 
 header nav ul li {
-    margin: 0 15px;
+  margin: 0 15px;
 }
 
 header nav ul li a {
-    color: #fff;
-    text-decoration: none;
-    font-weight: bold;
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
 }
 
 .intro {
-    width: 50%;
-    padding: 50px 20px;
+  width: 50%;
+  padding: 50px 20px;
 }
 
 .intro h1 {
-    font-size: 2.5rem;
-    margin-bottom: 10px;
+  font-size: 2.5rem;
+  margin-bottom: 10px;
 }
 
 .intro p {
-    font-size: 1.2rem;
-    margin-bottom: 20px;
+  font-size: 1.2rem;
+  margin-bottom: 20px;
 }
 
 .cta-button {
-    background: #007BFF;
-    color: white;
-    padding: 10px 20px;
-    text-decoration: none;
-    border-radius: 5px;
+  background: #007bff;
+  color: white;
+  padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 5px;
 }
 
 .cta-button:hover {
-    background: #0056b3;
+  background: #0056b3;
 }
 
 main {
-    background-color: #fff;
+  background-color: #fff;
 }
 
 h2 {
-    text-align: center;
-    margin-bottom: 20px;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 section {
-    margin-bottom: 40px;
+  margin-bottom: 40px;
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 footer {
-    text-align: center;
-    padding: 10px 0;
-    background-color: #333;
-    color: #fff;
+  text-align: center;
+  padding: 10px 0;
+  background-color: #333;
+  color: #fff;
 }
 
 html {
-    scroll-behavior: smooth; /* This adds smooth scrolling when clicking links */
+  scroll-behavior: smooth; /* This adds smooth scrolling when clicking links */
+  overflow-x: hidden;
 }
 
 .cta-button {
-    transition: background-color 0.3s ease-in-out;
+  transition: background-color 0.3s ease-in-out;
 }
 
 /* Add fade-in effect for elements */
 .fade-in {
-    opacity: 0;
-    transform: translateY(20px);
-    transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.8s ease-out, transform 0.8s ease-out;
 }
 
 .fade-in.visible {
-    opacity: 1;
-    transform: translateY(0);
+  opacity: 1;
+  transform: translateY(0);
 }
 
-#typed-text, #typed-subtext {
-    font-family: 'Courier New', Courier, monospace;
-    white-space: nowrap;
-    overflow: hidden;
-    width: 0; /* Start with no text visible */
-    opacity: 0;
-    transition: opacity 0.5s;
+#typed-text,
+#typed-subtext {
+  font-family: "Courier New", Courier, monospace;
+  white-space: nowrap;
+  overflow: hidden;
+  width: 0; /* Start with no text visible */
+  opacity: 0;
+  transition: opacity 0.5s;
 }
 
 .typing {
-    animation: typing 3.5s steps(30, end), forwards;
-    opacity: 1 !important;
-    width: 100% !important;
+  animation: typing 3.5s steps(30, end), forwards;
+  opacity: 1 !important;
+  width: 100% !important;
 }
 
 .cards-section {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap; /* Ensure cards wrap on small screens */
-    gap: 2rem;
-    padding: 2rem;
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap; /* Ensure cards wrap on small screens */
+  gap: 2rem;
+  padding: 2rem;
 }
 
 /* Card Styles */
 .card {
-    position: relative;
-    border: 1px solid white;
-    width: 70%; /* Fixed width for desktop */
-    padding: 1.5rem;
-    cursor: pointer;
-    transition: transform 0.3s ease-in-out;
+  position: relative;
+  border: 1px solid white;
+  width: 70%; /* Fixed width for desktop */
+  padding: 1.5rem;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
 }
 
 .card-icon.fraunhofer {
-    width: 110px;
+  width: 110px;
 }
 
 .card-icon.ovgu {
-    width: 18%;
+  width: 18%;
 }
 
 .card-icon.tcs {
-    width: 18%;
-    height: 50px;
+  width: 18%;
+  height: 50px;
 }
 
 .card:hover {
-    transform: translateY(-10px); /* Lift the card on hover */
+  transform: translateY(-10px); /* Lift the card on hover */
 }
 
 /* Card Content Styles */
 .card-content {
-    text-align: left;
+  text-align: left;
 }
 
 .card-title {
-    font-size: 1.5rem;
-    font-weight: bold;
-    margin-bottom: 0.5rem;
-    color: #638cc5; /* Deep blue for contrast */
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+  color: #638cc5; /* Deep blue for contrast */
 }
 
 .card-subtitle {
-    font-size: 1.2rem;
-    font-weight: 600;
-    margin-bottom: 1rem;
-    color: #457b9d; /* Lighter blue */
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+  color: #457b9d; /* Lighter blue */
 }
 
 .card-date {
-    font-size: 0.9rem;
-    font-weight: 500;
-    color: #a8a8a8;
-    margin-bottom: 1rem;
+  font-size: 0.9rem;
+  font-weight: 500;
+  color: #a8a8a8;
+  margin-bottom: 1rem;
 }
 
 .card-description {
-    font-size: 1rem;
-    color: #6d6d6d;
-    line-height: 1.5;
+  font-size: 1rem;
+  color: #6d6d6d;
+  line-height: 1.5;
+  letter-spacing: 1px;
 }
 
 .card-icon {
-    position: absolute;
-    right: 15px;
-    width: 110px;
-    height: 65px;
+  position: absolute;
+  right: 15px;
+  width: 110px;
+  height: 65px;
 }
 
 .skill-set {
-    display: flex;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    flex-wrap: wrap;
-    padding: 20px 200px;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  flex-wrap: wrap;
+  padding: 20px 200px;
 }
 
 .skil-set {
-    width: 12%;
-    margin: 25px;
-    transition: transform 0.3s ease-in-out;
+  width: 12%;
+  margin: 25px;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
 }
 
 .skil-set i {
-    display: inline-block;
-    font-size: 130px;
-    height: 100%;
+  display: inline-block;
+  font-size: 130px;
+  height: 100%;
 }
 
 .skil-set:hover {
-    transform: translateY(-10px); /* Lift the card on hover */
+  transform: translateY(-10px); /* Lift the card on hover */
+}
+
+#projects {
+  position: relative;
+  padding: 20px 200px;
+  background-image: url("./project.jpg");
+  background-size: 100%;
+  background-repeat: repeat;
+  min-height: 1500px;
+  margin-bottom: 0;
+}
+
+li.project-option {
+  border: 1px solid white;
+  color: grey;
+  letter-spacing: 1px;
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+}
+
+li.project-option:hover {
+    transform: translateY(-10px);
+}
+
+li.project-option h3 {
+  margin-bottom: 5px;
+  color: #457b9d;
+}
+
+.project-icon {
+  display: flex;
+  justify-content: start;
+}
+
+li.project-option p {
+    margin-bottom: 10px;
+}
+
+.project-icon i {
+  font-size: 100px;
+  width: 25%;
 }
