--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,10 @@ body {
 .about-contents {
   width: 100%;
   display: flex;
+  flex-direction: column;
   margin: 20px 0;
+  color: grey;
+  letter-spacing: 1px;
 }
 
 #about {
@@ -51,6 +54,15 @@ body {
   background-repeat: no-repeat;
   background-size: 1000px;
   background-position: 130% 40%;
+}
+
+.socials img {
+  width: 5%;
+  height: 40px;
+}
+
+.socials a {
+  text-decoration: none;
 }
 
 p.about-me {
@@ -426,7 +438,7 @@ li.project-option {
 }
 
 li.project-option:hover {
-    transform: translateY(-10px);
+  transform: translateY(-10px);
 }
 
 li.project-option h3 {
@@ -440,7 +452,7 @@ li.project-option h3 {
 }
 
 li.project-option p {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .project-icon i {
